아바타 모션이 행동 명칭에 따라 반응하도록 설정

--- a/actions/avatar/import.yaml
+++ b/actions/avatar/import.yaml
@@ -5,7 +5,8 @@ files:
   - sad.yaml
   - angry.yaml
   - surprised.yaml
-  - move.yaml
-  - wave.yaml
-  - nod.yaml
   - laugh.yaml
+  - sleep.yaml
+  - wakeup.yaml
+  - shy.yaml
+  - touch.yaml
